Fixed spacing issues and flex direction for some elements on visit page

--- a/css/style.css
+++ b/css/style.css
@@ -261,8 +261,14 @@ footer a:hover {
   font-weight: 700;
   justify-content: center;
 }
+.vital-info #opening-times {
+  margin-top: var(--space-lg);
+}
 .left-desktop {
   display: none;
+}
+.right-side {
+  margin-top: var(--space-md);
 }
 .visit-section {
   font-size: 24px;
